# ohw24_proj_xarray_load_by_step_us

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  hycom_access_example.ipynb  noxfile.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml
contributor_folders/team_member_2/: ErrorDescription.ipynb
data/: data.csv
docs/: conf.py  index.md
final_notebooks/: Untitled.ipynb  hycom_access_example.ipynb  ohw24_project_presentation.ipynb  other_datasets.ipynb  project_result_1.ipynb
load_by_step/: __init__.py  _load_by_step.py  hycom_access_example.ipynb
src/load_by_step/: __init__.py  _load_by_step.py  _options.py
tests/: test_package.py
